--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.show-sql: true
 server.port: ${PORT:8080}
 
+spring.servlet.multipart.max-request-size: 10MB
+spring.servlet.multipart.max-file-size: 10MB
+
 spring.mail.host: smtp.gmail.com
 spring.mail.port: 587
 spring.mail.username: devpubnoreply@gmail.com
